# IHSetTurki

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
IHSetTurki/: __init__.py  calibration.py  calibration_2.py  direct_run.py  turki.py
IHSetTurki.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_rot/: config.nc  ens.nc  par.nc  sl.nc  wav.nc
docs/: conf.py  index.md
src/IHSetTurki/: __init__.py  calibration.py  plot_par_evolution.py  turki.py
src/IHSetTurki/tests/: __init__.py  test_turki.py
