[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "IHSetTurki"
authors = [{ name = "Lim, Changbin", email = "changbin.lim@unican.es" }]
maintainers = [{ name = "Lim, Changbin", email = "changbin.lim@unican.es" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description"]

dependencies = ["numpy", "pytest >=7", "scipy", "shapely", "xarray", "matplotlib","pandas", "netCDF4", "setuptools"]

[project.optional-dependencies]
dev = ["flit", "black", "sphinx", "myst-nb", "sphinx_rtd_theme", "pre-commit"]

[project.urls]
documentation = "https://ihcantabria.github.io/IHSetTurki/"
repository = "https://github.com/IHCantabria/IHSetTurki"
changelog = "https://github.com/IHCantabria/IHSetTurki/blob/main/CHANGELOG.md"


[project.scripts]
ihsetturki-tests = "IHSetTurki.tests.__init__:run_tests"


[tool.pytest.ini_options]
addopts = "--durations=0 --durations-min=0.1"
testpaths = "src/tests"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
